Refactor to make compatible to java 8